# brawl

./: .env.example  README.md  main.py  pyproject.toml
brawl/: __init__.py
brawl/agentenv/: readme.md
brawl/agentenv/controller/: __init__.py  agent.py  env.py  task.py  utils.py
brawl/agentenv/envs/: webarena.py
brawl/agentenv/grpo/: collector.py  learner.py  vllm_engine.py
brawl/gym/: README.md
brawl/gym/drivers/: async_driver.py
brawl/gym/env/: base_env.py
brawl/gym/env/webarena-env/: webarena_env.py
brawl/gym/env/webarena_env/: webarena_env.py
brawl/gym/env/webarena_env/webarena/: minimal_example.py  requirements.txt  run.py  setup.py
brawl/gym/env/webarena_env/webarena/agent/: __init__.py  agent.py
brawl/gym/env/webarena_env/webarena/browser_env/: __init__.py  actions.py  async_envs.py  auto_login.py  constants.py  env_config.py  envs.py  helper_functions.py  processors.py  trajectory.py  utils.py
brawl/gym/env/webarena_env/webarena/evaluation_harness/: __init__.py  evaluators.py  helper_functions.py
brawl/gym/env/webarena_env/webarena/llms/: __init__.py  lm_config.py  tokenizers.py  utils.py
brawl/gym/env/webarena_env/webarena/scripts/: check_error_runs.py  collect_obs.py  generate_test_data.py  html2json.py
brawl/gym/env/webarena_env/webarena/tests/: conftest.py
brawl/gym/learners/: base_learner.py  ppo_learner.py
brawl/gym/policies/: base_policy.py  vllm_policy.py
brawl/gym/workers/: collector.py
conf/: ppo_browser.yaml
conf/benchmark/: webarena.yaml
tools/: cluster.yaml  start_cluster.py
(+18 files in other folders)
