[project]
name = "brawl"               # fine to leave as-is (the wheel can be called "brawl"
version = "0.1.0"            #   even if it ships both import trees)
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "gputil>=1.4.0",
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0",
  "ray>=2.47.0",
  "torch==2.7.0",
  "transformers>=4.52.4",
  "vllm>=0.9.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
include = [
  "brawl", "brawl.*",
  "verl",  "verl.*"
]


